--- a/about.html
+++ b/about.html
@@ -5,16 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./pages-styles/about.css">
+    <link rel="stylesheet" href="./pages-styles/shop.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="./pages-styles/arrival.css">
+    <link rel="stylesheet" href="./pages-styles/index.css">
+    <script defer src="./data.js"></script>
     <title>About</title>
 </head>
 <body>
+    <div class="modal-type" id="popup">
+        <div class="modal-wrapper">
+            <div class="modal-content-wrapper text-center">
+                <img src="./pages/images/navlogo.png" alt="">
+                <h2 class="heading-100">Error</h2>
+                <p class="sub-description-2">Apologies for the inconvenience, we're now unavailable due to server maintenance.
+                </p>
+                <button class="main-btn" onclick="closeModal()">Close</button>
+            </div>
+        </div>
+    </div>
     <nav class="navbar navbar-expand-lg">
         <div class="container align-items-center ">
                 <div>
-                    <a class="navbar-brand" href="#">
+                    <a class="navbar-brand" href="index.html">
                         <img src="./pages/images/navlogo.png" alt="logo" class="nav-logo">
                     </a>
                 </div> 
@@ -26,6 +41,9 @@
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
+                            <a class="nav-link" href="index.html">Home</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" href="about.html">About</a>
                         </li>
                         <li class="nav-item">
@@ -34,8 +52,8 @@
                         <li class="nav-item">
                             <a class="nav-link" href="shop.html">Shop</a>
                         </li>
-                        <li class="nav-item ms-2 d-none d-lg-inline">
-                            <a class="nav-link "> 
+                        <li class="nav-item ms-2 d-none d-lg-inline" onclick="openModal()">
+                            <a class="nav-link "  > 
                                 <img src="./pages/images/carticon.png" alt="cart">
                             </a>
                         </li>
@@ -63,17 +81,17 @@
     <div class="dont-miss container-xxl">
         <div class="row justify-content-center">
             <div class="col-sm col-md-4 upper-image">
-                <img src="./pages/images/rainbowsmile.png" alt="">
+                <img src="./pages/images/rainbowsmile.png" alt="" class="img-fluid">
             </div>
             <div class="col-sm col-md-4 pt-5 mid">
                 <h2>Don't miss out on this opportunity</h2>
                 <h4>Step into style with our shoes - buy now! Experience the difference in quality with our products</h4>
                 <p>High-quality materials: Air Jordan shoes are typically made with premium leather and other durable materials to ensure they last a long time and provide good support.</p>
-                <button class="main-btn">About us</button>
-                <button class="sub-main-btn">Learn more</button>
+                <button class="main-btn" onclick="openModal()">About us</button>
+                <button class="sub-main-btn" onclick="openModal()">Learn more</button>
             </div>
             <div class="col-sm col-md-4 image-wrapper-dont">
-                <img src="./pages/images/readinghappy.png" alt="">
+                <img src="./pages/images/readinghappy.png" alt="" class="img-fluid">
             </div>
         </div>
     </div>
@@ -83,11 +101,11 @@
             <p class="office-text col-sm-auto col-md-6 ">The creation and launch of an e-commerce website for an online shoe store is a crucial aspect of this project. </p>
         </div>
         <div class="office-images row justify-content-center align-items-center">
-            <img class="office-sizes col-sm-auto col-md-4  img-fluid " src="./pages/images/girlsoffice.png" alt="">
-            <img class="office-sizes col-sm-auto col-md-4  img-fluid " src="./pages/images/meeting.png" alt="">
-            <img class="office-sizes col-sm-auto col-md-4  img-fluid " src="./pages/images/ligtheroffice.png" alt="">
+            <img class="office-sizes col-sm-auto col-md-4  img-fluid " src="./pages/images/girlsoffice.png" alt="" class="img-fluid">
+            <img class="office-sizes col-sm-auto col-md-4  img-fluid " src="./pages/images/meeting.png" alt="" class="img-fluid">
+            <img class="office-sizes col-sm-auto col-md-4  img-fluid " src="./pages/images/ligtheroffice.png" alt="" class="img-fluid">
         </div>
-        <button class="sub-main-btn">Learn more</button>
+        <button class="sub-main-btn" onclick="openModal()">Learn more</button>
         <div class="favorites row">
             <div class="favorites-wrapper col-sm-auto  col-md-3 ">
                 <img src="./pages/images/icons/shopping_bag_FILL1_wght500_GRAD0_opsz48 1.png" alt="" class="img-fluid">
@@ -144,7 +162,7 @@
                     <span><img class="pro-icons" src="./pages/images/rediit.png" alt=""></span>
                     <span><img class="pro-icons" src="./pages/images/tiwtter.png" alt=""></span>
                 </div>
-                <button class="main-btn">Buy now</button>
+                <button class="main-btn"onclick="openModal()">Email Us</button>
             </div>
         </div>
         <div class="developers-wrappers row">
@@ -161,9 +179,136 @@
                     <span><img class="pro-icons"src="./pages/images/rediit.png" alt=""></span>
                     <span><img class="pro-icons"src="./pages/images/tiwtter.png" alt=""></span>
                 </div>
-                <button class="main-btn">Buy now</button>
+                <button class="main-btn"onclick="openModal()">Email Us</button>
             </div>
         </div>
+    </div>
+    <div id="carouselExampleControls" class="feedback-slider carousel slide container " data-bs-ride="carousel">
+        <h2 class="heading-300 text-center pt-5 pb-5">Feedbacks</h2>
+        <div class="carousel-inner">
+          <div class="carousel-item active ps-5 pe-5">
+            <div class="row justify-content-center align-items-center">
+                <div class="feedback-wrapper col-sm-auto col-md-5 m-1">
+                    <div class="row">
+                        <div class="col-sm-auto col-md-3">
+                            <img src="./pages/images/profile/download 1.png" alt="profile" class="img-fluid">
+                        </div>
+                        <div class="col-sm-auto col-md-9">
+                            <h2 class="name-heading">Maria Clara Dela Rosa</h2>
+                            <p class="title-heading">Teacher</p>
+                            <p class="qoute-description">'Tuned Air System: The shoe features the Tuned Air System which is a system of individual 
+                                pods that work together to provide a customized level of cushioning for the foot.'</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="feedback-wrapper col-sm-auto col-md-5 m-1">
+                    <div class="row">
+                        <div class="col-sm-auto col-md-3">
+                            <img src="./pages/images/profile/joseph.png" alt="profile" class="img-fluid">
+                        </div>
+                        <div class="col-sm-auto col-md-9">
+                            <h2 class="name-heading">Joseph N. Tulog</h2>
+                            <p class="title-heading">Athlete</p>
+                            <p class="qoute-description">'Tuned Air System: The shoe features the Tuned Air System which is a system of individual 
+                                pods that work together to provide a customized level of cushioning for the foot.'</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row justify-content-center align-items-center">
+                <div class="feedback-wrapper col-sm-auto col-md-5 m-1">
+                    <div class="row">
+                        <div class="col-sm-auto col-md-3">
+                            <img src="./pages/images/profile/cole.png" alt="profile" class="img-fluid">
+                        </div>
+                        <div class="col-sm-auto col-md-9">
+                            <h2 class="name-heading">Shyna K. Cole </h2>
+                            <p class="title-heading">Student</p>
+                            <p class="qoute-description">'Tuned Air System: The shoe features the Tuned Air System which is a system of individual 
+                                pods that work together to provide a customized level of cushioning for the foot.'</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="feedback-wrapper col-sm-auto col-md-5 m-1">
+                    <div class="row">
+                        <div class="col-sm-auto col-md-3">
+                            <img src="./pages/images/profile/emilio.png" alt="profile" class="img-fluid">
+                        </div>
+                        <div class="col-sm-auto col-md-9">
+                            <h2 class="name-heading">Emilio D. Garcia </h2>
+                            <p class="title-heading">Designer</p>
+                            <p class="qoute-description">'Tuned Air System: The shoe features the Tuned Air System which is a system of individual 
+                                pods that work together to provide a customized level of cushioning for the foot.'</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+          </div>
+          <div class="carousel-item ps-5 pe-5 ">
+            <div class="row justify-content-center align-items-center">
+                <div class="feedback-wrapper col-sm-auto col-md-5 m-1">
+                    <div class="row">
+                        <div class="col-sm-auto col-md-3">
+                            <img src="./pages/images/profile/download 1.png" alt="profile" class="img-fluid">
+                        </div>
+                        <div class="col-sm-auto col-md-9">
+                            <h2 class="name-heading">Maria Clara Dela Rosa</h2>
+                            <p class="title-heading">Teacher</p>
+                            <p class="qoute-description">'Tuned Air System: The shoe features the Tuned Air System which is a system of individual 
+                                pods that work together to provide a customized level of cushioning for the foot.'</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="feedback-wrapper col-sm-auto col-md-5 m-1">
+                    <div class="row">
+                        <div class="col-sm-auto col-md-3">
+                            <img src="./pages/images/profile/joseph.png" alt="profile" class="img-fluid">
+                        </div>
+                        <div class="col-sm-auto col-md-9">
+                            <h2 class="name-heading">Joseph N. Tulog</h2>
+                            <p class="title-heading">Athlete</p>
+                            <p class="qoute-description">'Tuned Air System: The shoe features the Tuned Air System which is a system of individual 
+                                pods that work together to provide a customized level of cushioning for the foot.'</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row justify-content-center align-items-center">
+                <div class="feedback-wrapper col-sm-auto col-md-5 m-1">
+                    <div class="row">
+                        <div class="col-sm-auto col-md-3">
+                            <img src="./pages/images/profile/cole.png" alt="profile" class="img-fluid">
+                        </div>
+                        <div class="col-sm-auto col-md-9">
+                            <h2 class="name-heading">Shyna K. Cole </h2>
+                            <p class="title-heading">Student</p>
+                            <p class="qoute-description">'Tuned Air System: The shoe features the Tuned Air System which is a system of individual 
+                                pods that work together to provide a customized level of cushioning for the foot.'</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="feedback-wrapper col-sm-auto col-md-5 m-1">
+                    <div class="row">
+                        <div class="col-sm-auto col-md-3">
+                            <img src="./pages/images/profile/emilio.png" alt="profile" class="img-fluid">
+                        </div>
+                        <div class="col-sm-auto col-md-9">
+                            <h2 class="name-heading">Emilio D. Garcia </h2>
+                            <p class="title-heading">Designer</p>
+                            <p class="qoute-description">'Tuned Air System: The shoe features the Tuned Air System which is a system of individual 
+                                pods that work together to provide a customized level of cushioning for the foot.'</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+          </div>
+        </div>
+        <button class=" feedback-btn carousel-control-prev align-items-end arrowbtn-l d-sm-none d-md-none" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+            <img src="./pages/images/Polygon 5.png" alt="" class="d-sm-none d-md-none d-lg-block">
+        </button>
+        <button class=" feedback-btn carousel-control-next align-items-end arrowbtn-r d-sm-none d-md-none" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+            <img src="./pages/images/Polygon 6.png" alt="" class="d-sm-none d-md-none d-lg-block">
+        </button>
     </div>
     <div class="email-us container">
         <div class="row">
@@ -178,7 +323,7 @@
                 </div>
             </div>
             <div class="col-sm-auto col-md-6">
-                <img class="main-img img-fluid" src="./pages/images/aboutpagemainimg.png" alt="email-main-image" >
+                <img class="main-img img-fluid" src="./pages/images/aboutpagemainimg.png" alt="email-main-image" class="img-fluid">
             </div>
         </div>
     </div>
@@ -195,4 +340,13 @@
             <p class="hide">Copyright © 2023 CoverFeetAssociation, CoverFeet.org</p>
     </div> 
 </body>
+<!-- <script>
+    let popup = document.querySelector('#popup')
+function openModal(){
+    popup.classList.add('open')
+}
+function closeModal(){
+    popup.classList.remove('open')
+}
+</script> -->
 </html>
